--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 .game-container {
@@ -11,7 +12,10 @@
 .opponent-info {
     width: 100%;
     height: 10%;
-    background-color: rgb(233, 173, 173);
+    background-image: url(../assets/borders.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: space-between;
 }
@@ -19,25 +23,30 @@
 .game-board {
     width: 100%;
     height: 60%;
-    background-color: rgb(173, 182, 233);
+    background-image: url(../assets/board0.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 
 .opponent-board {
     width: 100%;
     height: 35%;
-    background-color: rgb(204, 173, 233);
 }
 
 .player-board {
     width: 100%;
     height: 65%;
-    background-color: rgb(173, 206, 233);
 }
 
 .player-info {
     width: 100%;
     height: 30%;
-    background-color: rgb(175, 223, 175);
+    background-image: url(../assets/borders.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: space-between;
 }
@@ -46,13 +55,14 @@
     width: 70%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .player-hand-card {
     width: 150px;
     height: 220px;
     background-color: rgb(231, 209, 107);
+    margin-top: 2%;
 }
 
 
