--- a/css/game.css
+++ b/css/game.css
@@ -1,7 +1,13 @@
+:root {
+    width: 100vw;
+    height: 100vh;
+}
+
 * {
     margin: 0;
     padding: 0;
     color: white;
+    overflow: hidden;    
 }
 
 .game-container {
@@ -51,13 +57,15 @@
     background-position: center;
     display: flex;
     justify-content: space-between;
+    align-items:flex-start;
 }
 
 .player-hand {
     width: 70%;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .player-hand-card {
