--- a/css/game.css
+++ b/css/game.css
@@ -61,6 +61,7 @@
 .player-info {
     width: 100%;
     height: 30%;
+    overflow: visible;
     border-top: 3px solid black;
     background-size:cover;
     background-repeat: no-repeat;
@@ -128,6 +129,45 @@
 .card-stats > div {
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.card-cost-mp {
+    width: 40px;
+    height: fit-content;
+    text-align: center;
+    text-justify: center;
+    font-weight: bold;
+    padding: 10px;
+    background-image: url("../assets/mp.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.card-attack {
+    width: 40px;
+    height: fit-content;
+    text-align: center;
+    text-justify: center;
+    font-weight: bold;
+    padding: 10px;
+    background-image: url("../assets/atk.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.card-hp {
+    width: 40px;
+    height: fit-content;
+    text-align: center;
+    text-justify: center;
+    font-weight: bold;
+    padding: 10px;
+    background-image: url("../assets/hp.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
