--- a/css/game.css
+++ b/css/game.css
@@ -26,8 +26,8 @@
     width: 100%;
     height: 10%;
     border-bottom: 3px solid black;
-    display: flex;
-    justify-content: start;
+    display: grid;
+    grid-template-columns: 100px 1fr 4fr 3fr;
 }
 
 .opponent-avatar {
@@ -51,11 +51,63 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    flex-basis: content;    
+}
+
+.opponent-hp {
+    background: url(../assets/hpPlayer.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 40px 20px 40px 20px;
+    height: fit-content;
+    
+}
+
+.opponent-mp {
+    background: url(../assets/mpPlayer.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 20px;
+    height: fit-content;
+    
+}
+
+.opponent-deck {
+    background: url(../assets/deck.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 20px;
+    height: fit-content;
+    
+}
+
+.opponent-data2 {
+    padding-bottom: 10px;
+}
+
+
+.player-commands {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
 .hero-power, .end-turn {
-    padding: 10px;
+    height: fit-content;
+    width: fit-content;
+    margin: 20px;
+    padding: 40px;
     overflow: visible;
     background: url(../assets/button.png);
     background-size: contain;
@@ -105,12 +157,10 @@
     justify-content: space-between;
     align-items:flex-start; */
     display: grid;
-    grid-template-columns: 100px 1fr 250px;
+    grid-template-columns: 1fr 250px;    
 }
 
-.player-commands {
-    flex-basis: 10%;
-}
+
 
 .player-hand {
     /* width: 80%; */
@@ -122,22 +172,59 @@
     overflow: visible;   
 }
 
-.player-data {
-    flex-basis: 10%;
-}
-
 .player-avatar {
     width: 100%;
     height: 200px;
     overflow: visible;
 }
 
-/* .player-hand-card {
-    width: 150px;
-    height: 220px;
-    background-color: rgb(231, 209, 107);
-    margin-top: 2%;
-} */
+.player-data {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    text-shadow: #000 3px 3px 3px;
+    -webkit-font-smoothing: antialiased;
+}
+
+.player-data > div {
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-bottom: 20px;    
+}
+
+.player-hp {
+    background: url(../assets/hpPlayer.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 40px 20px 40px 20px;
+}
+
+.player-mp {
+    background: url(../assets/mpPlayer.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 20px;
+}
+
+.player-deck {
+    background: url(../assets/deck.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 5px 10px 0 0;
+    padding: 20px;
+}
 
 .card {
     /* width: 180px; */
@@ -175,7 +262,7 @@
     position: absolute;
     bottom: 1px;
     font-family: 'RocknRollOne';
-    font-size: 0.5rem;
+    font-size: 0.6rem;
     font-weight: 150;
     color: rgb(248, 243, 201);
     text-align: center;
