--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,5 @@
 :root {
     --candle-light: rgba(252, 217, 23, 0.8);
-
-
-    --gris-clair: #37465B;
-    --vert-fonce: #08C6AB;
-    --vert-clair: #5AFFE7;
-    --violet: #726EFF;
-    --coins-sections: 10px;
-    --coins-boutons: 25px;
-    --police: 'Chakra Petch', sans-serif;
     width: 100vw;
     height: 100vh;
 }
@@ -44,15 +35,10 @@ body {
     padding: 2%;
     border-radius: 5%;
     position: absolute;
-    top: 10%;
+    top: 15%;
     left: 32%;
     background-color: rgba(0, 0, 0, 0.00000000000000000000000001);
     animation: flicker 10s ease-in-out  alternate-reverse infinite;
-
-
-
-
-    /* box-shadow: 0px 0px 500px 200px var(--candle-light); */
 
 }
 
@@ -87,7 +73,7 @@ form div {
     height: fit-content;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 input {
@@ -104,8 +90,11 @@ input {
     margin: 10px;
 }
 
-a {
-    text-decoration: none;
+.connnection-error {
+    margin-top: 25px;
+    font-size: 1rem;
+    font-family: 'RocknRollOne';
+    color:crimson;
 }
 
 button {
@@ -119,7 +108,6 @@ button {
 }
 
 button:hover {
-    /* transform: rotate(90); */
     transform: rotate(90deg);
 }
 
@@ -133,8 +121,6 @@ button:hover {
       transform: translate(-2081px);
     }
   }
-
-  /* box-shadow: 0px 0px 500px 200px rgba(252, 217, 23, 0.8); */
 
   @keyframes flicker {
 	0% {
@@ -205,7 +191,6 @@ button:hover {
 	100% {
 		box-shadow: -20px -10px 500px 115px rgba(252, 217, 23, 0.2);
         box-shadow: -40px -30px 500px 150px rgba(252, 217, 23, 0.5);
-
 	}
 }
 
@@ -219,11 +204,6 @@ button:hover {
 @font-face {
     font-family: "AncientHylian";
     src: url("../assets/fonts/AncientHylian.otf");
-}
-
-@font-face {
-    font-family: "ReggaeOne";
-    src: url("../assets/fonts/ReggaeOne-Regular.ttf");
 }
 
 @font-face {
