--- a/css/game.css
+++ b/css/game.css
@@ -134,6 +134,7 @@
     width: fit-content;
     margin: 20px;
     padding: 40px;
+    word-break: keep-all;
     overflow: visible;
     background: url(../assets/button.png);
     background-size: contain;
@@ -226,7 +227,7 @@
     background: url(../assets/hpPlayer.png);
     background-size: auto;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center top;
     background-size: contain;
     margin: 5px 10px 0 0;
     padding: 40px 20px 40px 20px;
@@ -282,15 +283,16 @@
 }
 
 .card-dedicated {
-    width: fit-content;
+    width: 140px;
     height: fit-content;
-    margin: auto;
+    margin: 0;
+    padding: 0;
     position: absolute;
     bottom: 1px;
     font-family: 'RocknRollOne';
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     font-weight: 150;
-    color: rgb(248, 243, 201);
+    color: black;
     text-align: center;
     text-justify: center;
     font-style: italic;
