--- a/css/statscards.css
+++ b/css/statscards.css
@@ -128,18 +128,20 @@ button:hover {
 }
 
 .card-dedicated {
-    width: fit-content;
+    width: 140px;
     height: fit-content;
-    margin: auto;
+    margin: 0;
+    padding: 0;
     position: absolute;
     bottom: 1px;
     font-family: 'RocknRollOne';
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     font-weight: 150;
-    color: rgb(248, 243, 201);
+    color: black;
     text-align: center;
     text-justify: center;
     font-style: italic;
+    /*color: rgb(248, 243, 201);*/
 }
 
 .card-stats {
