Tests CSS Lobby

--- a/css/lobby.css
+++ b/css/lobby.css
@@ -13,16 +13,16 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: 0px;
+    width: 1920px;
+    height: 1080px;
+    position: fixed;
+    bottom: 0px;
     left: 0px;
     background-image: url("../assets/jellyshopbig.png");
     background-repeat: no-repeat;
     background-position-x: left;
     background-position-y: bottom;
-    background-size: auto;
+    /* background-size: 1600px 1080px; */
 }
 
 .welcome {
