--- a/css/game.css
+++ b/css/game.css
@@ -5,6 +5,7 @@
     --card-height: 230px;
 }
 
+
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +13,35 @@
     font-family: 'ReggaeOne';    
     color: whitesmoke;  
 }
+
+
+::-webkit-scrollbar {
+    width: 30px;  
+}
+
+  
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(196, 178, 99);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(133, 115, 39);
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+
 
 .splash {
     width: 100vw;
@@ -22,6 +52,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
 
 .splash-text {
     width: fit-content;
@@ -37,13 +68,6 @@
 }
 
 
-
-/* .hidden {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s 2s, opacity 2s linear;
-  } */
-
 .game-container {
     width: 100vw;
     height: 100vh;
@@ -52,6 +76,7 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
 
 .opponent-info {
     width: 100%;
@@ -63,10 +88,12 @@
     -webkit-font-smoothing: antialiased;  
 }
 
+
 .opponent-avatar {
     height: 100%;
     width: fit-content;
 }
+
 
 .opponent-avatar > img {
     height: 100%;
@@ -74,11 +101,13 @@
     transform: scaleX(-1);
 }
 
+
 .opponent-data {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 
 .opponent-data > div {
     display: flex;
@@ -89,6 +118,7 @@
     text-shadow: #000 -2px 2px 3px;
     -webkit-font-smoothing: antialiased;
 }
+
 
 .opponent-hp {
     background: url(../assets/hpPlayer.png);
@@ -102,6 +132,7 @@
     
 }
 
+
 .opponent-mp {
     background: url(../assets/mpPlayer.png);
     background-size: auto;
@@ -113,6 +144,7 @@
     height: fit-content;
     
 }
+
 
 .opponent-deck {
     background: url(../assets/deck.png);
@@ -126,15 +158,18 @@
     
 }
 
+
 .opponent-data2 {
     padding-bottom: 10px;
 }
+
 
 .message-area {
     width: 100%;
     height: 100%;
     display: flex;
 }
+
 
 .message {
     margin: auto;
@@ -149,6 +184,7 @@
     justify-content: space-around;
     align-items: center;
 }
+
 
 .timer {
     background: url(../assets/hourglass.png);
@@ -183,6 +219,7 @@
     flex-direction: column;    
 }
 
+
 .opponent-board {
     width: 100%;
     height: 50%;
@@ -193,6 +230,7 @@
     flex-basis: auto;
     flex-shrink: 0;
 }
+
 
 .player-board {
     width: 100%;
@@ -205,9 +243,10 @@
     flex-shrink: 0;
 }
 
+
 .player-info {
     width: 100%;
-    height: 30%;
+    height: 32%;
     overflow: visible;
     border-top: 3px solid black;
     background-size:cover;
@@ -221,22 +260,22 @@
 }
 
 
-
 .player-hand {
-    /* width: 80%; */
-    height: 100%;
+    height: 100%;    
     display: flex;
     flex-basis: 80%;
     justify-content: center;
     align-items: center;
-    overflow: visible;   
+    overflow-x: scroll;   
 }
+
 
 .player-avatar {
     width: 100%;
     height: 200px;
     overflow: visible;
 }
+
 
 .player-data {
     display: flex;
@@ -247,6 +286,7 @@
     text-shadow: #000 2px 2px 3px;
     -webkit-font-smoothing: antialiased;    
 }
+
 
 .player-data1 {
     text-shadow: #000 -2px 2px 3px;
@@ -262,6 +302,7 @@
     text-align: center;
 }
 
+
 .player-data > div {
     height: fit-content;
     width: fit-content;
@@ -271,6 +312,7 @@
     align-items: flex-start;
     margin-bottom: 2px;    
 }
+
 
 .player-hp {
     background: url(../assets/hpPlayer.png);
@@ -282,6 +324,7 @@
     padding: 40px 20px 40px 20px;
 }
 
+
 .player-mp {
     background: url(../assets/mpPlayer.png);
     background-size: auto;
@@ -291,6 +334,7 @@
     margin: 5px 10px 0 0;
     padding: 20px;
 }
+
 
 .player-deck {
     background: url(../assets/deck.png);
@@ -302,8 +346,8 @@
     padding: 20px;
 }
 
+
 .card {
-    /* width: 180px; */
     height: var(--card-height);
     position: relative;
     overflow: visible;
@@ -318,11 +362,13 @@
     flex-grow: 0;
 }
 
+
 .card-img {
     border-bottom: inset rgb(100, 16, 16) 1px;
     margin: 0;
     padding: 0;
 }
+
 
 .card-mechanic {
     font-family: 'RocknRollOne';
@@ -330,6 +376,7 @@
     font-weight: 200;
     color: rgb(121, 28, 28);
 }
+
 
 .card-dedicated {
     width: 140px;
@@ -347,6 +394,7 @@
     font-style: italic;
 }
 
+
 .card-stats {
     width: var(--card-width);
     position: absolute;
@@ -357,6 +405,7 @@
     justify-content: space-between;
     align-items: space;     */
 }
+
 
 .card-stats > div {
     padding-left: 10px;
@@ -380,15 +429,19 @@
     background-position: bottom;
 }
 
+
 .card-cost-mp {    
     background-image: url("../assets/mp.png");    
 }
+
 
 .card-hp {
     width: 10px;    
     background-image: url("../assets/hp.png");
     background-size:auto;
 }
+
+
 
 @keyframes fadeOut {
     0% {opacity: 1;}
