--- a/css/game.css
+++ b/css/game.css
@@ -37,10 +37,15 @@
     background-color: rgb(133, 115, 39);
 }
 
+
 .clickable {
     cursor: pointer;
 }
 
+
+.clickable:hover {
+    scale: 1.05;
+}
 
 
 .splash {
@@ -71,7 +76,7 @@
 .game-container {
     width: 100vw;
     height: 100vh;
-    background-image: url(../assets/board0.png);
+    background-image: url(../assets/board.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -81,9 +86,9 @@
 .opponent-info {
     width: 100%;
     height: 10%;
-    border-bottom: 3px solid black;
+    border-bottom: 3px groove black;
     display: grid;
-    grid-template-columns: 100px 1fr 4fr 3fr;    
+    grid-template-columns: 100px 1.5fr 4fr 3fr;    
     text-shadow: #000 2px 2px 3px;
     -webkit-font-smoothing: antialiased;  
 }
@@ -106,6 +111,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 1.23rem;
 }
 
 
@@ -181,7 +187,7 @@
 .player-commands {
     font-size: 1.6rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -194,7 +200,9 @@
     background-size: contain;
     padding: 20px;
     height: fit-content;
-    width: fit-content;
+    width: max-content;
+    font-size: 2rem;
+    text-shadow: black -2px -2px 3px;
 }
 
 
@@ -248,32 +256,24 @@
     width: 100%;
     height: 32%;
     overflow: visible;
-    border-top: 3px solid black;
+    border-top: 3px groove black;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* display: flex;
-    justify-content: space-between;
-    align-items:flex-start; */
     display: grid;
     grid-template-columns: 1fr 250px;    
 }
 
 
 .player-hand {
-    height: 100%;    
+    height: 100%;     
+    padding-right: 20px;   
     display: flex;
+    flex-direction: row-reverse;
     flex-basis: 80%;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     overflow-x: scroll;   
-}
-
-
-.player-avatar {
-    width: 100%;
-    height: 200px;
-    overflow: visible;
 }
 
 
@@ -295,10 +295,9 @@
 
 
 .player-data2 {
-    margin: 0px;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 1px 10px 5px 10px;
+    padding: 1px 10px 23px 10px;
     text-align: center;
 }
 
@@ -318,10 +317,10 @@
     background: url(../assets/hpPlayer.png);
     background-size: auto;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: center center;
     background-size: contain;
     margin: 5px 10px 0 0;
-    padding: 40px 20px 40px 20px;
+    padding: 20px 30px 30px 30px;
 }
 
 
@@ -352,7 +351,7 @@
     position: relative;
     overflow: visible;
     border-radius: 10px;
-    border: ridge rgb(100, 16, 16) 2px;
+    border: solid rgb(100, 16, 16) 3px;
     margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
@@ -396,18 +395,16 @@
 
 
 .card-stats {
+    margin: 0;
     width: var(--card-width);
     position: absolute;
     top: -20px;
     right: -110px;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: space;     */
 }
 
 
 .card-stats > div {
+    margin: 0;
     padding-left: 10px;
     padding-right: 10px;
     width: 40px;
@@ -427,11 +424,13 @@
 .card-attack {    
     background-image: url("../assets/atk.png");
     background-position: bottom;
+    margin: 0;
 }
 
 
 .card-cost-mp {    
-    background-image: url("../assets/mp.png");    
+    background-image: url("../assets/mp.png");
+    margin: 0;    
 }
 
 
@@ -439,17 +438,18 @@
     width: 10px;    
     background-image: url("../assets/hp.png");
     background-size:auto;
+    margin: 0;
 }
 
 
 
 @keyframes fadeOut {
     0% {opacity: 1;}
+
     100% {
         z-index: -10;
         opacity: 0;
     }
-
 }
 
 
@@ -457,11 +457,6 @@
 @font-face {
     font-family: "Triforce";
     src: url("../assets/fonts/Triforce.ttf");
-}
-
-@font-face {
-    font-family: "AncientHylian";
-    src: url("../assets/fonts/AncientHylian.otf");
 }
 
 @font-face {
