--- a/css/statscards.css
+++ b/css/statscards.css
@@ -5,6 +5,7 @@
     --card-height: 230px;
 }
 
+
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +13,7 @@
     font-family: 'ReggaeOne';    
     color: whitesmoke;
 }
+
 
 body {
     width: 100%;
@@ -23,8 +25,9 @@ body {
     background-image: url(../assets/statscards.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center bottom;
 }
+
 
 button {
     margin: 50px;
@@ -43,13 +46,15 @@ button {
     -webkit-font-smoothing: antialiased;
 }
 
+
 button:hover {
     cursor: pointer;
 }
 
+
 .stats-container {
     width: 80%;
-    flex-basis: 330px;
+    flex-basis: 310px;
     flex-shrink: 0;
     flex-grow: 0;
     display: flex;
@@ -64,13 +69,16 @@ button:hover {
     border-radius: 50px;
 }
 
+
 ::-webkit-scrollbar {
     width: 20px;  
 }
   
+
 ::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
 
 ::-webkit-scrollbar-thumb {
     background-color: #94c1d1;
@@ -79,22 +87,27 @@ button:hover {
     background-clip: content-box;
 }
 
+
 ::-webkit-scrollbar-thumb:hover {
     background-color: steelblue;
 }
+
 
 .no-stats {
     width: 100%;
     height: fit-content;
     margin: auto;
+    font-size: 3rem;
     color: #000;
     text-align: center;
 }
+
 
 .card-info {
     margin: 30px;
     overflow: visible;
 }
+
 
 .card-data > div {
     width: 100%;
@@ -105,22 +118,23 @@ button:hover {
     text-align: center;
 }
 
-.card {    
+
+.card {
     width: var(--card-width);
     height: var(--card-height);
     position: relative;
     overflow: visible;
     border-radius: 10px;
-    border: ridge rgb(100, 16, 16) 2px;
+    border: solid rgb(100, 16, 16) 3px;
     margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
-    background-color: rgb(211, 187, 82);
+    background-color: rgb(196, 178, 99);
     flex-basis: var(--card-width);
     flex-shrink: 0;
     flex-grow: 0;
-    margin-bottom: 10px;
 }
+
 
 .card-img {
     border-bottom: inset rgb(100, 16, 16) 1px;
@@ -128,12 +142,14 @@ button:hover {
     padding: 0;
 }
 
+
 .card-mechanic {
     font-family: 'RocknRollOne';
     font-size: 0.7rem;
     font-weight: 200;
     color: rgb(121, 28, 28);
 }
+
 
 .card-dedicated {
     width: 140px;
@@ -149,17 +165,24 @@ button:hover {
     text-align: center;
     text-justify: center;
     font-style: italic;
-    /*color: rgb(248, 243, 201);*/
 }
 
+
 .card-stats {
+    margin: 0;
     width: var(--card-width);
     position: absolute;
     top: -20px;
     right: -110px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space;     */
 }
 
+
 .card-stats > div {
+    margin: 0;
     padding-left: 10px;
     padding-right: 10px;
     width: 40px;
@@ -179,17 +202,24 @@ button:hover {
 .card-attack {    
     background-image: url("../assets/atk.png");
     background-position: bottom;
+    margin: 0;
 }
 
+
 .card-cost-mp {    
-    background-image: url("../assets/mp.png");    
+    background-image: url("../assets/mp.png");
+    margin: 0;    
 }
+
 
 .card-hp {
     width: 10px;    
     background-image: url("../assets/hp.png");
     background-size:auto;
+    margin: 0;
 }
+
+
 
 @font-face {
     font-family: "ReggaeOne";
