--- a/css/game.css
+++ b/css/game.css
@@ -69,7 +69,7 @@
     top: 45%;
     background-color: rgba(0, 0, 0, 0.00000000000000000000000001);
     font-family: 'Triforce';
-    font-size: 5rem;
+    font-size: 500%;
 }
 
 
@@ -160,8 +160,7 @@
     background-size: contain;
     margin: 5px 10px 0 0;
     padding: 20px;
-    height: fit-content;
-    
+    height: fit-content;    
 }
 
 
@@ -212,7 +211,10 @@
     margin: 20px;
     padding: 40px;
     word-break: keep-all;
-    overflow: visible;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 90%;
+    text-align: center;
     background: url(../assets/button.png);
     background-size: contain;
     background-repeat: no-repeat;
